# bellandur-blues

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py  models.py
app/routers/: articles.py  audio.py  feed.py
app/services/: extractor.py  feed_generator.py  storage.py  tts.py
app/static/: index.html
