[project]
name = "bellandur-blues"
version = "0.1.0"
description = "Personal article-to-podcast generator"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "trafilatura>=1.12.0",
    "openai>=1.50.0",
    "feedgen>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pydub>=0.25.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
bellandur-blues = "app.main:start"
